--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -432,7 +432,7 @@
     <string name="job_feedback_hint">Please leave feedback for this job</string>
     <string name="job_i_can_make_it">I can still make it</string>
     <string name="job_applied_pending">You applied - Awaiting decision</string>
-    <string name="job_applied_title_1">Cool!\n You\'ve applied for the</string>
+    <string name="job_applied_title_1">Cool!\n\n You\'ve applied for the</string>
     <string name="job_applied_title_2">job with</string>
     <string name="job_applied_title_3">starting on</string>
     <string name="job_applied_subtitle">We\'ll let you know as soon as they have made a decision!</string>
