--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -421,6 +421,7 @@
         \nGood luck.
     </string>
     <string name="job_details_reporting_to">Reporting to</string>
+    <string name="job_details_turn_up_address">Address to turn up at</string>
     <string name="job_details_date_arrival">Date &amp; Time to arrive</string>
     <string name="job_details_notes">Anything else to note</string>
     <string name="job_details_experience">Experience: </string>
