--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -405,7 +405,7 @@
 
     <!-- Worker Jobs -->
     <string name="worker_jobs_booked">Booked</string>
-    <string name="worker_jobs_offers_applications">Offers &amp; Applications</string>
+    <string name="worker_jobs_offers_applications">Offers &amp;\nApplications</string>
     <string name="worker_jobs_liked">Liked</string>
     <string name="worker_jobs_completed">Completed</string>
     <string name="worker_jobs_end_contract">End Contract</string>
