--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -662,6 +662,7 @@
     <string name="worker_passport_photo">Photo of passport</string>
     <string name="worker_cscs_card">CSCS Card</string>
     <string name="worker_cscs_not_verified">Not verified</string>
+    <string name="worker_cscs_verified">Verified</string>
     <string name="worker_cscs_reg_number">CSCS Card Registration Number</string>
     <string name="worker_cscs_expires_ends">Expires Ends</string>
     <string name="worker_cscs_record_category">Record - Category</string>
