--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -667,6 +667,8 @@
     <string name="worker_cscs_reg_number">CSCS Card Registration Number</string>
     <string name="worker_cscs_expires_ends">Expires Ends</string>
     <string name="worker_cscs_record_category">Record - Category</string>
+    <string name="worker_english_level">Level of English</string>
+    <string name="worker_contact_info">Contact info</string>
 
     <!-- Employer Account -->
     <string name="company_description">Company description</string>
