--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -669,6 +669,9 @@
     <string name="worker_cscs_record_category">Record - Category</string>
     <string name="worker_english_level">Level of English</string>
     <string name="worker_contact_info">Contact info</string>
+    <string name="worker_experience_types">Type of experience</string>
+    <string name="worker_details_provided">Provided</string>
+    <string name="worker_details_not_provided">Not provided</string>
 
     <!-- Employer Account -->
     <string name="company_description">Company description</string>
