--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -855,8 +855,8 @@
 
     <string name="share_employer_general_title">
         Hey,
-        I\’ve just joined The Square.
-        It\’s the new app that matches you to the best quality construction workers when you need them.
+        I\'ve just joined The Square.
+        It\'s the new app that matches you to the best quality construction workers when you need them.
         It saves you a load of time, money and effort.
         You should check it out.
         Enjoy!
@@ -865,8 +865,8 @@
 
     <string name="share_worker_general_title">
         Hey,
-        I\’ve just joined The Square.
-        It\’s the new app that matches you to the best paying construction jobs near you.
+        I\'ve just joined The Square.
+        It\'s the new app that matches you to the best paying construction jobs near you.
         You should check it out.
         Enjoy!
     </string>
