--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -429,14 +429,14 @@
     <string name="job_details_turn_up_address">Address to turn up at</string>
     <string name="job_details_date_arrival">Date &amp; time to arrive</string>
     <string name="job_details_notes">Anything else to note</string>
-    <string name="job_details_experience">Experience: </string>
+    <string name="job_details_experience">Experience </string>
     <string name="job_details_english_level">Level of English</string>
     <string name="job_details_overtime">Overtime</string>
     <string name="job_details_overtime_text">£%d per hour</string>
-    <string name="job_details_mandatory_requirements">Requirements: </string>
-    <string name="job_details_qualifications">Qualifications: </string>
-    <string name="job_details_experience_types">Types of experience: </string>
-    <string name="job_details_availability">Availability: </string>
+    <string name="job_details_mandatory_requirements">Requirements </string>
+    <string name="job_details_qualifications">Qualifications </string>
+    <string name="job_details_experience_types">Types of experience </string>
+    <string name="job_details_availability">Availability </string>
     <string name="job_details_booking_canceled">Booking canceled!</string>
     <string name="job_like">Like</string>
     <string name="job_unlike">Unlike</string>
