--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -751,7 +751,7 @@
     <string name="employer_payments_try_text">1 job promotion for up to 1 week.
                             \nUp to 20 suitable candidate matches.</string>
     <string name="employer_payments_upgrade">Upgrade your plan</string>
-    <string name="employer_payments_upgrade_here">Upgrade here</string>
+    <string name="employer_payments_upgrade_here">Choose your plan</string>
     <string name="employer_payments_due_date">Bill due %s</string>
     <string name="employer_payments_upgrade_title">Subscribe for \u00A3500 / month</string>
     <string name="employer_payments_upgrade_text">
@@ -783,8 +783,12 @@
     <string name="payments_topups_display_bookings">%1$d / %2$d</string>
     <string name="payments_plans_display_bookings">%1$d / %2$d</string>
     <string name="payments_expiration_format">(Expires %s)</string>
-    <string name="payments_bill_due_format">Bill due %s</string>
+    <string name="payments_bill_due_format">Renews on %s</string>
     <string name="payments_cant_pay_cc">Can\'t pay by credit card? (Tap for options)</string>
+    <string name="payments_cancel_title">Sorry you want to leave us...</string>
+    <string name="payments_cancel_subtitle">You will be able to use your remaining booking
+                        credits, but your plan will not renew next month.
+                        \n\nAre you sure you wish to cancel? </string>
 
     <string name="employer_payments_discount">If you have a special discount code enter at payment stage.</string>
     <string name="employer_payments_docs"><b>Terms &amp; Conditions</b> apply</string>
