--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -696,6 +696,7 @@
     <string name="worker_experience_types">Type of experience</string>
     <string name="worker_details_provided">Provided</string>
     <string name="worker_details_not_provided">Not provided</string>
+    <string name="worker_commute_time">I will travel up to %d mins from their address</string>
 
     <!-- Employer Account -->
     <string name="company_description">Company description</string>
